--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   agora_rtc_engine: ^6.1.0  
   permission_handler: ^10.2.0
+  get: ^4.3.8
 
 
   cupertino_icons: ^1.0.2
