--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   agora_rtc_engine: ^6.1.0  
   permission_handler: ^10.2.0
   get: ^4.3.8
+  flutter_svg: ^1.1.6
 
 
   cupertino_icons: ^1.0.2
@@ -32,9 +33,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
