--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,10 @@ dependencies:
   permission_handler: ^10.2.0
   get: ^4.3.8
   flutter_svg: ^1.1.6
-
-
+  shared_preferences: ^2.0.17
+  provider: ^6.0.5
   cupertino_icons: ^1.0.2
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
