--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   provider: ^6.0.5
   cupertino_icons: ^1.0.2
   email_validator: ^2.1.17
+  flutter_keyboard_visibility: ^5.1.0
 
 dev_dependencies:
   flutter_test:
