--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE" tools:ignore="ProtectedPermissions" /> 
    <application
-        android:label="doctovirt"
+        android:label="Docto Virt"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
